added prometheus and cleand up the code
