# docs/swagger.yaml
@@ -24,6 +24,19 @@ info:
   title: GO Example Addressbook
   version: "1.0"
 paths:
+  /metrics:
+    get:
+      description: Provide a list of all currently known Prometheus metrics
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: Prometheus metrics line by line
+          schema:
+            type: string
+      summary: List all Prometheus metrics
+      tags:
+      - metrics
   /users:
     delete:
       description: Will delete all users. an empty list will be returned
